<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>jdb</groupId>
    <artifactId>NativeJDB</artifactId>
    <version>1.0-SNAPSHOT</version>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>4.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.6.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <sonar.organization>nativejdb</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.projectKey>nativejdb_nativejdb</sonar.projectKey>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-verbose</arg>
                        <arg>--add-modules=jdk.hotspot.agent</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.oops=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.tools=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.runtime=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.classfile=ALL-UNNAMED"</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.debugger=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.utilities=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.tools.jcore=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.memory=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.classfile=ALL-UNNAMED</arg>
                        <arg>--add-opens</arg>
                        <arg>jdk.hotspot.agent/sun.jvm.hotspot.oops=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
